[package]
name = "k4671"
version = "0.1.0"
edition = "2024"

[dependencies]
tmc4671 = { path = "tmc4671" }
# Change stm32f429zi to your chip name, if necessary.
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "stm32f407vg", "unstable-pac", "memory-x", "time-driver-tim3", "exti", "chrono"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt" ] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
critical-section = "1.1"
nb = "1.0.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
usbd-hid = "0.8.1"
static_cell = "2"
chrono = { version = "^0.4", default-features = false}
assign-resources = "0.5.0"
anchor = { git = "https://github.com/Annex-Engineering/anchor.git" }

[build-dependencies]
anchor_codegen = { git = "https://github.com/Annex-Engineering/anchor.git" }

[profile.release]
debug = 2
