[package]
name = "k4671"
version = "0.1.0"
edition = "2024"

[dependencies]
tmc4671 = { path = "tmc4671" }
dfu = { path = "dfu" }

# Change stm32f429zi to your chip name, if necessary.
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "stm32f407vg", "unstable-pac", "memory-x", "time-driver-tim8", "exti", "chrono"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-24_000_000"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt" ] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
num-traits = { version = "0.2", features = ["libm"], default-features = false }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
#embedded-hal = "0.2.6"
#embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.9", default-features = false }
critical-section = "1.1"
nb = "1.0.0"
embedded-storage = "0.3.1"
micromath = "2.0.0"
bytemuck = { version = "1.23.1", features = ["derive", "min_const_generics", "aarch64_simd", "pod_saturating", "must_cast"] }
usbd-hid = "0.8.1"
static_cell = { version = "2.1.1", features = ["nightly"] }
chrono = { version = "^0.4", default-features = false}
assign-resources = "0.5.0"
anchor = { git = "https://github.com/Annex-Engineering/anchor.git" }
maybe-async-cfg = "0.2"

[build-dependencies]
anchor_codegen = { git = "https://github.com/Annex-Engineering/anchor.git" }

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "s"
overflow-checks = false

[[bin]]
name = "k4671"
path = "src/main.rs"
test = false
doctest = false
bench = false
