[package]
name = "tmc4671"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-devices-derive= { git = "https://github.com/oddlama/embedded-devices", version = "0.9.13" }
embedded-interfaces = { git = "https://github.com/oddlama/embedded-devices", version = "0.9.13" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-1_000_000"] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
embedded-hal-async = { version = "1.0" }
defmt = "1.0.1"
bytemuck = { version = "1.23.1", features = ["derive", "min_const_generics"] }
thiserror = { version = "2.0.12", default-features = false }

[features]
default = ["async"]

sync = []
async = []

