[package]
name = "tmc4671"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-devices-derive= { git = "https://github.com/oddlama/embedded-devices" }
embedded-interfaces = { git = "https://github.com/oddlama/embedded-devices"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-24_000_000"] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
embedded-hal-async = { version = "1.0" }
embedded-hal = { version = "1.0" }
defmt = "1.0.1"
bytemuck = { version = "1.23.1", features = ["derive", "min_const_generics", "aarch64_simd", "pod_saturating", "must_cast"] }
thiserror = { version = "2.0.12", default-features = false }
const-builder = "0.1.3"
maybe-async-cfg = "0.2"
paste = "1.0"
fixed = "1.29"
num-traits = { version = "0.2", features = ["libm"], default-features = false }

[features]
default = ["async"]

sync = []
async = []

